Fix contrast ratio

--- a/src/styles/base/vars.css
+++ b/src/styles/base/vars.css
@@ -4,7 +4,7 @@
 @custom-media --md-viewport-max (max-width: 768px);
 
 :root {
-  --color-green: #5ca019;
+  --color-green: #477c13;
   --color-dark-gray: #373737;
   --color-light-gray: #dfdfdf;
 }
